--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "tape": "^4.6.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "repository": {
     "type": "git",
